--- a/master.css
+++ b/master.css
@@ -7,8 +7,9 @@ body {
 }
 
 #board {
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     width: 550px;
     height: 800px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
+    background-image: url("./images/space.png");
 }
